@@ -18,7 +18,13 @@ import pipes
 _debug = 0
 
 _prune = ['(*)']
+def system (cmd):
+	print cmd
+	s = os.system (cmd)
+	if s:
+		raise 'barf'
 
+	
 def find(pattern, dir = os.curdir):
         list = []
         names = os.listdir(dir)
@@ -91,12 +97,12 @@ def cleanup ():
 	global from_diff, to_diff, original_dir
 	os.chdir ('/tmp/package-diff')
 	sys.stderr.write ('Cleaning ... ')
-	os.system ('rm -fr %s %s' % (from_diff, to_diff))
+	system ('rm -fr %s %s' % (from_diff, to_diff))
 	sys.stderr.write ('\n')
 	os.chdir (original_dir)
 
 def untar (fn):
-	# os.system ('pwd');
+	# system ('pwd');
 	try:
 		open (fn)
 	except:
@@ -104,7 +110,7 @@ def untar (fn):
 		cleanup ()
 		sys.exit (1)
 	sys.stderr.write ("Untarring: %s\n" % fn)
-	os.system ('gzip --quiet -dc ' + fn + '| tar xf - ')
+	system ('gzip --quiet -dc ' + fn + '| tar xf - ')
 	sys.stderr.flush ()
 
 def remove_automatic (dirnames):
@@ -148,13 +154,13 @@ def remove_configure (dir):
 	os.chdir (dir)
 
 	# ugh
-	os.system ('rm -f *.ly')
+	system ('rm -f *.ly')
 
 	# should do 'make distclean ?'
-	os.system ('rm -rf debian/out GNUmakefile config.cache config.h config.hh config.log config.make config.status configure stepmake/GNUmakefile stepmake/config.hh stepmake/config.log stepmake/config.status stepmake/config.make')
+	system ('rm -rf debian/out GNUmakefile config.cache config.h config.hh config.log config.make config.status configure stepmake/GNUmakefile stepmake/config.hh stepmake/config.log stepmake/config.status stepmake/config.make')
 
 	# ugh: symlinks
-	os.system ('rm -f stepmake/stepmake/stepmake stepmake/stepmake/bin')
+	system ('rm -f stepmake/stepmake/stepmake stepmake/stepmake/bin')
 
 
 # ugh, how to get rid of .tex files generated by lily?
@@ -201,10 +207,10 @@ def makediff (fromdir, todir, patch_name):
 	f.close ()
 			
 	sys.stderr.write ('diffing to %s... ' % patch_name)
-	os.system ('pwd')
+	system ('pwd')
 	print ('diff -purN %s . >> %s' % (fromdir, patch_name))
-	os.system ('diff -purN %s . >> %s' % (fromdir, patch_name))
-	os.system ('gzip --quiet -9f %s' % patch_name)
+	system ('diff -purN %s . >> %s' % (fromdir, patch_name))
+	system ('gzip --quiet -9f %s' % patch_name)
    
 
 os.environ['GZIP'] = '-q'
@@ -281,7 +287,7 @@ if release:
 import tempfile
 original_dir = os.getcwd ();
 
-os.system ('rm -rf /tmp/package-diff') 
+system ('rm -rf /tmp/package-diff') 
 try:
 	os.mkdir ('/tmp/package-diff')
 except:
@@ -320,10 +326,10 @@ if not from_src:
 	os.chdir (original_dir)
 else:
 	sys.stderr.write ('copying ' + from_src + ' to ' + from_diff + '\n')
-	# os.system ('cp -pr %s %s' % (srcdir, from_diff))
-	os.system ('mkdir -p %s '% (from_diff))
+	# system ('cp -pr %s %s' % (srcdir, from_diff))
+	system ('mkdir -p %s '% (from_diff))
 	os.chdir (from_src)
-	os.system ('tar cf - --exclude out --exclude out-www . \
+	system ('tar cf - --exclude out --exclude out-www . \
 		| tar -xf - -C %s' % from_diff)
 
 
@@ -333,10 +339,10 @@ if not to_src:
 	os.chdir (original_dir)
 else:
 	sys.stderr.write ('copying ' + to_src + ' to ' + to_diff + '\n')
-	os.system ('mkdir -p %s '% (to_diff))
-	# os.system ('cp -pr %s %s'  (to_src, to_diff))%
+	system ('mkdir -p %s '% (to_diff))
+	# system ('cp -pr %s %s'  (to_src, to_diff))%
 	os.chdir (to_src)
-	os.system ('tar -cf - --exclude out --exclude out-www . \
+	system ('tar -cf - --exclude out --exclude out-www . \
 		. | tar -xf - -C %s ' % to_diff)
 
 os.chdir (to_diff)
